changed height on section-projects-img-computers to auto to fix issue with images squishing

--- a/css/main.scss
+++ b/css/main.scss
@@ -185,8 +185,8 @@ nav .brand-logo {
 }
 
 .section-projects-img-computers {
-  width: 100%;
-  height: 400px;
+  max-width: 100%;
+  height: auto;
   /* margin: 2% 0% 0% 0%; */
   z-index: 0;
 }
